# langchain

./: .env  langchain12.ipynb  langgraph.ipynb  langgraphbot.ipynb  pyproject.toml  readme.md  requirements.txt
langchainbasics/: langchainbasiics.ipynb  qachatbot.py
